# CuraCallProyect

./: .gitignore  CHECKLIST_VERIFICACION.md  QS_head.txt  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  replit.md  tailwind.config.ts  tsconfig.json
attached_assets/: Pasted-Crea-una-app-Next-js-14-App-Router-TypeScript-llamada-CuraCall-Dise-o-minimalista-oscuro-vidrio-1756388170744_1756388170744.txt
client/src/: App.tsx  index.css
client/src/components/: DiagnosticPanel.tsx  FloatingChatWidget.tsx  LanguageToggle.tsx  LoadingOverlay.tsx  ModeToggle.tsx  ParticleSystem.tsx  QuickSettings.tsx  Sidebar.tsx  ThemeProvider.tsx  UniversalChatInterface.tsx  VoiceOrb.tsx
client/src/hooks/: useFloatingChat.ts  (+6 more)
server/: .env.example  Dockerfile  README.md  index.ts  main.py  pyproject.toml  routes.ts  tts_coqui.py
server/api/: chat.ts
server/lib/: ai-service.ts  ollama.ts  summarizer.ts
server/prisma/: schema.prisma
server/prisma/migrations/20250829114419_init/: migration.sql
server/prisma/server/prisma/: dev.db-journal
server/routes/: ai.ts  chat.ts  conversations.ts  messages.ts  openrouter.ts
shared/: schema.ts
tests/e2e/: README.md  accessibility.spec.ts  chat-flow.spec.ts  error-handling.spec.ts  global-setup.ts  test-utils.ts  voice-features.spec.ts
web/: .env.example  .env.production  Dockerfile  netlify.toml  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
web/nextjs-ai-chatbot2-main/: drizzle.config.ts  package.json  pnpm-lock.yaml
web/styles/: globals.css
(+37 files in other folders)
